# zenithauth

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: identity.py
examples/: fastapi_app.py
integrations/: fastapi.py
src/zenithauth/: config.py  manager.py
src/zenithauth/core/: authorizer.py  exceptions.py  identity.py  mfa.py  security.py  tokens.py
test/: pyvenv.cfg
tests/: mock_repo.py  test_initial.py  test_manager.py  test_mfa.py  test_policy.py  test_tokens_revocation.py
