[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zenithauth"
version = "0.1.0"
description = "Professional, secure modern authorization and authentication system."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "argon2-cffi>=23.1.0",
    "pydantic[email]>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
]
authors = [
{name = "Sarthak Ganguly", email = "sganguly@sgownblog.com"}
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "pydantic-settings>=2.1.0", 
    "pyotp>=2.9.0",
    "qrcode>=7.4.2",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "build>=1.0.0",  
    "twine>=5.0.0", 
    "hatchling>=1.21.0", 
]

[tool.hatch.build.targets.wheel]
packages = ["src/zenithauth"]

[project.urls]
"Homepage" = "https://github.com/sarthakganguly/zenithauth"
"Bug Tracker" = "https://github.com/sarthakganguly/zenithauth/issues"
